# mimir

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  opencode.json  pyproject.toml  requirements.txt  scan.py  setup.sh
.opencode/agents/: analyst.md  cloud-code-reviewer.md  cloud-reviewer.md  deep-analyst.md  deep-bug-hunter.md  doc-writer.md  frontend-reviewer.md  local-reviewer.md  main.md  memo-writer.md  plan-reviewer.md  researcher.md  review-second.md  security-analyst.md  senior-dev.md
.opencode/command/: build.md  finalise-build.md  multi.md  review-frontend.md
config/: mimir.yaml
core/config/: loader.py
core/device/: detect.py  device_base.py  factory.py  hackrf_rx.py  pluto_rx.py  profiles.py
core/legal/: compliance_guard.py
core/pipeline/: capture.py  features.py  fft.py  scan_result.py  scanner.py
dashboard/: __init__.py  capture_loop.py  server.py  shared_state.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
dashboard/static/: index.html  style.css  waterfall.js
data/: frequency_reference.json
docs/: ROADMAP.md  au-legal-reference.md  wiki.md
embeddings/: __init__.py  embedder.py  store.py
llm/: acma_reference.py  classifier.py
tests/: test_classifier.py  test_scan.py
tools/: build_frequency_reference.py  calibrate_thresholds.py  capture_to_vectorstore.py  check_thresholds_cli.py  compare_decode_rate.py  delete_low_snr.py  diagnose_fingerprints.py  diagnose_live.py  diagnose_pluto_gain.py  diagnose_threshold.py  inspect_snr.py  seed_chromadb.py
(+121 files in other folders)
