[project]
name = "mimir"
version = "0.1.0"
description = "AI-Powered RF Spectrum Scanner — passive receive only"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
    "chromadb>=0.5.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-engineio>=4.8.0",
    "python-socketio[client]>=5.11.0",
    "huggingface-hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
